--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -1,24 +1,11 @@
 {
 	"compilerOptions": {
-		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-		"target": "ES2022",
-		"lib": ["ES2023"],
-		"module": "ESNext",
-		"skipLibCheck": true,
 		"composite": true,
 		"moduleResolution": "bundler",
 		"allowSyntheticDefaultImports": true,
-		"allowImportingTsExtensions": true,
-		"isolatedModules": true,
-		"moduleDetection": "force",
-		"noEmit": false,
-
-		/* Linting */
-		"strict": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true
+		"module": "ESNext",
+		"skipLibCheck": true,
+		"noEmit": false
 	},
 	"include": ["vite.config.ts"]
 }
